test/SILOptimizer/moveonly_consume_during_borrow_1.code
// RUN: %target-language-frontend -emit-sil -verify %s

fn foo(x: consuming Foo) { // expected-error{{'x' used after consume}}
    x.bar.foo(x) // expected-error{{overlapping accesses to 'x'}} expected-note 3 {{}}
}

struct Foo: ~Copyable {
    var bar: Bar {
        _read { fatalError() }
    }
}

struct Bar: ~Copyable {
    fn foo(_: consuming Foo) {}
}
